src/main/java:
    - data gen bug-fix, now generates the recipes for coal block & quartz in the correct directory (now in data/mcmod/recipes instead of data/minecraft/recipes overwriting the original coal block recipe)

src/main/resources:


DOCUMENTATION:
    - runCommand function (both)
    - enchant function
    - enchantWithAll function

RECIPES:
Coal block from charcoal:
    CCC
    CCC
    CCC
    C = charcoal == coal block
Quartz from Quartz block **SC:
    Quartz block = 4 quartz

ITEMS:
    - beats/beats bb music disc
    - crush/crush bb music disc
    - tage wach/ tage wach bb music disc
    - leiche music disc
    - linseneintopf
    - sapphire sword

COMMANDS:
    /afk
        - /afk-init                  -- initializes the AFK scoreboard, only runnable by OP's
        - /afk                       -- afk's the player that ran the command
        - /un-afk                    -- another option of un-afk'ing next to moving while in /afk
    /viewCoords
        - /viewCoords                -- outputs the coords of the given player (as argument) and their dimension
    /nbt
        - /dumpNbt                   -- prints out (to the console!) the nbt data of the item held in hand
        - /listItemNbtTags           -- (NOT FULLY WORKING!) prints out (to the console!) all possible nbt tags that can be used on the item held in hand
    /home public/private
        - /home public/private set   -- sets a public/private home coord
        - /home public/private tp    -- teleports the player to public/private home coord
        - /home public/private clear -- clears the public/private home coord (SPECIAL WHEN PUBLIC::clears only the home set by the player that ran it OR if the player is OP)
    /antrag
        - /antrag                    -- creates an antrag with the text given as an argument as its contents